# dear_niece

./: .gitignore  CLAUDE.md  README.md  TODOS.md  analyse.py  architecture.md  build_feature_set.py  load_baseis.py  metric_weights.yml  metrics.py  national_load_baseis.py  national_pivot_distributions.py  national_plot_distributions.py  plot_distributions.py  process-pre.py  process-step2.py  process.py  pyproject.toml  quickstart.md  refactor_metrics.md
.agents/: config.yml  rules.md
.agents/skills/: load-baseis.md  plot-distributions.md  process-distributions.md  run-analysis.md  run-profile-analysis.md
.agents/workflows/: yearly-update.md
data/: Bro-Maria.xlsx  baseis.xlsx
data/baseis-raw/: gel-2022.xlsx  gel-2023.xlsx  gel-2024.xlsx  gel-2025.xlsx
design/archive/: code_review_8c94a8.md  design_decisions.md  refactor_metrics.md
design/future_work/: refactor_package.md
design/metrics_refactor/: refactor_metrics.md
docs/: Makefile  make.bat
docs/source/: conf.py  index.md  methodology.md  overview.md  pipeline.md  profiles.md  update.md
output/: distributions_wide.xlsx  step2_analysis.xlsx  wide_df-work.xlsx  wide_df.xlsx
profiles/_golden/: README.md  expected-report-2025.md  schools.yml
profiles/manou2026/: gold_report-2026.md  schools.yml
profiles/maria/: gold_report-2025.md  schools.yml
tests/: _golden_helpers.py  _regen_golden.py  conftest.py  test_golden_profile.py  test_metrics.py  test_metrics_pipeline.py
