[project]
name = "dear-niece"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "scipy>=1.18.0",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=5.1.0",
    "sphinx>=9.1.0",
    "sphinxcontrib-mermaid>=2.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
